# vtkbone

./: .gitignore  CMakeLists.txt  CMakeOptions.cmake  Copyright.txt  LICENSE  README.md  azure-pipelines.yml  vtkboneConfig.cmake.in  vtkboneConfigure.h.in  vtkbone_version.h.in
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.github/workflows/: build-publish-anaconda.yaml  build-publish-anaconda.yml  debug-SDK.yml
Config/: CMakeLists.txt
HelperCode/: AbaqusInputReaderHelper.h
Source/: AbaqusInputReaderHelper.cxx  AbaqusInputReaderHelper.h  CMakeLists.txt  CommandStyleFileReader.cxx  CommandStyleFileReader.h  vtkbone.module  vtkboneAIMReader.cxx  vtkboneAIMReader.h  vtkboneAIMWriter.cxx  vtkboneAIMWriter.h  vtkboneAbaqusInputReader.cxx  vtkboneAbaqusInputReader.h  vtkboneAbaqusInputWriter.cxx  vtkboneAbaqusInputWriter.h  vtkboneApplyBendingTest.cxx  vtkboneApplyBendingTest.h  vtkboneApplyCompressionTest.cxx  vtkboneApplyCompressionTest.h  vtkboneApplyDirectionalShearTest.cxx  vtkboneApplyDirectionalShearTest.h  vtkboneApplySymmetricShearTest.cxx  vtkboneApplySymmetricShearTest.h  vtkboneApplyTestBase.cxx  vtkboneApplyTestBase.h  vtkboneApplyTorsionTest.cxx  vtkboneApplyTorsionTest.h  vtkboneCoarsenModel.cxx  vtkboneCoarsenModel.h  vtkboneConstraint.cxx  vtkboneConstraint.h  vtkboneConstraintCollection.cxx  vtkboneConstraintCollection.h  vtkboneConstraintUtilities.cxx  vtkboneConstraintUtilities.h  vtkboneDecimateImage.cxx  vtkboneDecimateImage.h  vtkboneErrorWarningObserver.cxx  vtkboneErrorWarningObserver.h  vtkboneFaimVersion5InputReader.cxx  vtkboneFaimVersion5InputReader.h  (+82 more)
Source/Config/: CMakeLists.txt  vtkbone-config.cmake.in  vtkboneConfig.cmake.in  vtkboneConfigVersion.cmake.in  vtkboneConfigure.h.in
Testing/: CMakeLists.txt
Testing/Cxx/: CMakeLists.txt  TestCxxDummy.cxx  TestStressStrainMatrix.cxx
Testing/Python/: CMakeLists.txt  TestApplyBendingTest.py  TestApplyCompressionTest.py  TestApplyDirectionalShearTest.py  TestApplySymmetricShearTest.py  TestApplyTestBase.py  TestApplyTorsionTest.py  TestCoarsenModel.py  TestConstraint.py  TestConstraintUtilities.py  TestFiniteElementModel.py  TestFiniteElementModelGenerator.py  TestGenerateHommingaMaterialTable.py  TestGenerateHomogeneousMaterialTable.py  TestImageConnectivityFilter.py  TestImageConnectivityMap.py  TestLinearAnisotropicMaterial.py  TestLinearAnisotropicMaterialArray.py  TestLinearIsotropicMaterial.py  TestLinearIsotropicMaterialArray.py  TestLinearOrthotropicMaterial.py  TestLinearOrthotropicMaterialArray.py  TestMaterialTable.py  TestMohrCoulombIsotropicMaterial.py  TestNodeSetsByGeometry.py  TestStressStrainMatrix.py  TestTensorOfInertia.py  apply_test_utilities.py  geometry_utilities.py  test_geometries.py
Utilities/: CMakeLists.txt
Utilities/Doxygen/: CMakeLists.txt  doc_makeall.sh.in  doc_vtkbone_mainpage.dox  doxyfile.in
Wrapping/Python/: compile_all_vtk.py.in
Wrapping/Python/vtkbone/: __init__.py
cmake/: fix_osx_libraries_build.sh  vtkboneModule.cmake  vtkboneModuleWrapPython.cmake  vtkboneOptions.cmake  vtkboneVersion.cmake  vtkboneWrapPython.cmake
cmake/modules/: FindnetCDF.cmake
conda-recipe/vtkbone/: bld.bat  build.sh  conda_build_config.yaml  environment.yml  meta.yaml  test_windows.py
develtools/: setenv_functions.sh
develtools/linux/: setenv.sh  setenv_build.sh  setenv_install.sh
develtools/mac/: fix_mac_libraries.sh  setenv.sh  setenv_build.sh
develtools/windows/: setenv.bat  setenv.ps1  setenv_build.bat  setenv_build.ps1
